# automaas

./: .gitignore  MANIFEST.in  PLANNING.md  README.md  TODO.md  ansible.cfg  automaas.yaml  configure.sh  env-setup.yaml  hosts.template  initial_lxd.yaml  maas_profile.yaml  playbook-vanilla-maas.yaml  playbook.yaml  profile.yaml  profile_working.yaml  requirements.txt  setup.cfg
automaas/: common.py  libvirt.py  lxd.py  main.py  yaml_helpers.py
automaas/lib/: api_test.py  db.py  maas_connector.py  maas_server_profile.yaml
automaas/templates/lxd_config/: network.yaml  projects.yaml  storage_pools.yaml
automaas/templates/lxd_profile/: config.yaml  netdev.yaml  network_config_ethernet.yaml  network_config_ethernet_gw.yaml  rootdiskdev.yaml  user_data.yaml
docs/: using-maas-and-lxd.md
lib/: libvirt-helpers.py  maas_connector.py  requirements.txt
resources/: 51-static-addresses.yaml  automaas-server.xml  setup-maas-vms.sh
roles/create-machines/tasks/: main.yaml
roles/images/files/: automaas-server.xml
roles/images/tasks/: main.yaml
roles/libvirt-nets/tasks/: main.yaml
roles/prereqs/tasks/: main.yaml
